[gd_scene load_steps=9 format=2]

[ext_resource path="res://challenges/week12/scenes/block/block.gd" type="Script" id=1]
[ext_resource path="res://common/fonts/PressStart2P-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://challenges/week12/gfx/cities/stars.webp" type="Texture" id=5]
[ext_resource path="res://challenges/week12/gfx/cities/cloudy.webp" type="Texture" id=6]
[ext_resource path="res://common/gfx/particle/rain.webp" type="Texture" id=7]
[ext_resource path="res://common/gfx/particle/snow.webp" type="Texture" id=8]
[ext_resource path="res://challenges/week12/gfx/cities/fog.webp" type="Texture" id=9]

[sub_resource type="DynamicFont" id=1]
size = 17
font_data = ExtResource( 2 )

[node name="block" type="Node2D"]
script = ExtResource( 1 )

[node name="background" type="Sprite" parent="."]
centered = false

[node name="cloudy" type="Node2D" parent="."]
visible = false

[node name="Sprite" type="Sprite" parent="cloudy"]
modulate = Color( 0.682353, 0.682353, 0.682353, 1 )
texture = ExtResource( 6 )
centered = false

[node name="city_img" type="Sprite" parent="."]
centered = false

[node name="fog" type="Node2D" parent="."]
visible = false

[node name="Sprite" type="Sprite" parent="fog"]
texture = ExtResource( 9 )
centered = false

[node name="night" type="Node2D" parent="."]
visible = false

[node name="Night" type="ColorRect" parent="night"]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0.00392157, 0.0117647, 0.0862745, 0.639216 )

[node name="Sprite" type="Sprite" parent="night"]
texture = ExtResource( 5 )
centered = false

[node name="LightRain" type="CPUParticles2D" parent="."]
position = Vector2( 512, -72 )
emitting = false
amount = 60
lifetime = 4.0
preprocess = 5.64
texture = ExtResource( 7 )
emission_shape = 2
emission_rect_extents = Vector2( 512, 1 )
direction = Vector2( 0, 1 )
spread = 0.0
initial_velocity = 153.85
linear_accel = 100.0
angle = 5.0
scale_amount = 0.1
scale_amount_random = 1.0

[node name="StrongRain" type="CPUParticles2D" parent="."]
position = Vector2( 512, -72 )
emitting = false
amount = 400
lifetime = 4.0
preprocess = 5.64
texture = ExtResource( 7 )
emission_shape = 2
emission_rect_extents = Vector2( 512, 1 )
direction = Vector2( 0, 1 )
spread = 0.0
initial_velocity = 153.85
linear_accel = 100.0
angle = 5.0
scale_amount = 0.1
scale_amount_random = 1.0

[node name="LightSnow" type="CPUParticles2D" parent="."]
position = Vector2( 512, -72 )
emitting = false
amount = 60
lifetime = 6.0
preprocess = 5.64
texture = ExtResource( 8 )
emission_shape = 2
emission_rect_extents = Vector2( 512, 1 )
direction = Vector2( 0, 0 )
spread = 125.0
initial_velocity_random = 1.0
linear_accel = -11.12
linear_accel_random = 0.56
angle = 5.0
scale_amount = 0.1
scale_amount_random = 0.38

[node name="StrongSnow" type="CPUParticles2D" parent="."]
position = Vector2( 512, -72 )
emitting = false
amount = 400
lifetime = 6.0
preprocess = 5.64
texture = ExtResource( 8 )
emission_shape = 2
emission_rect_extents = Vector2( 512, 1 )
direction = Vector2( 0, 0 )
spread = 128.08
initial_velocity = 59.83
initial_velocity_random = 1.0
linear_accel = -11.12
linear_accel_random = 0.56
angle = 140.4
scale_amount = 0.1
scale_amount_random = 0.38

[node name="city_name" type="Label" parent="."]
margin_left = 36.0
margin_top = 28.0
margin_right = 138.0
margin_bottom = 45.0
custom_fonts/font = SubResource( 1 )
text = "Prueba"

[node name="city_time" type="Label" parent="."]
margin_left = 36.0
margin_top = 56.0
margin_right = 138.0
margin_bottom = 73.0
custom_fonts/font = SubResource( 1 )
text = "Prueba"

[node name="city_weather" type="Label" parent="."]
margin_left = 36.0
margin_top = 84.0
margin_right = 155.0
margin_bottom = 101.0
custom_fonts/font = SubResource( 1 )
text = "Ptrueba"
